@@ -10,20 +10,34 @@ GeoServer's speed depends a lot on the chosen Java Runtime Environment (JRE). Th
 
 Tested:
 
+* Java 11 - GeoServer 2.15.x and above (OpenJDK tested)
 * Java 8 - GeoServer 2.9.x and above (OpenJDK and Oracle JRE tested)
 * Java 7 - GeoServer 2.6.x to GeoServer 2.8.x (OpenJDK and Oracle JRE tested)
 * Java 6 - GeoServer 2.3.x to GeoServer 2.5.x (Oracle JRE tested)
 * Java 5 - GeoServer 2.2.x and earlier (Sun JRE tested)
-
-Unsupported:
-
-* Java 9 - Incompatibility with Service Provider Interface Plugin System has been noted
 
 For best performance we recommend the use *Oracle JRE 8* (also known as JRE 1.8).
 
 .. Further speed improvements can be released using `Marlin renderer <https://github.com/bourgesl/marlin-renderer>`__ alternate renderer.
 
 As of GeoServer 2.0, a Java Runtime Environment (JRE) is sufficient to run GeoServer.  GeoServer no longer requires a Java Development Kit (JDK).
+
+Running on Java 11
+------------------
+
+GeoServer 2.15 will run under Java 11 with no additional configuration on **Tomcat 9** or newer and **Jetty 9.4.12** or newer.
+
+Running GeoServer under Java 11 on other Application Servers may require some additional configuration. Some Application Servers do not support Java 11 yet.
+
+* **Wildfly 14** supports Java 11, with some additional configuration - in the run configuration, under VM arguments add:
+
+      --add-modules=java.se
+
+  Future WildFly releases should support Java 11 with no additional configuration.
+
+* **GlassFish** does not currently Java 11, although the upcoming 5.0.1 release is expected to include support for it.
+
+* **WebLogic** do not yet support Java 11.
 
 Install native JAI and ImageIO extensions
 -----------------------------------------
